<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Next Plan</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="invalid_username">User Name is not valid</string>
    <string name="invalid_password">Password is not valid</string>
    <string name="registration">Registration</string>
    <string name="username_condition">User Name should contain atleast 2 characters with no spaces</string>
    <string name="first_name">First Name</string>
    <string name="firstname_condition">First Name should contain atleast 2 characters</string>
    <string name="last_name">Last Name</string>
    <string name="lastname_condition">Last Name should contain atleast 2 characters</string>
    <string name="email">e-mail</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="password_condition">Password should contain atleast 6 characters with 1 lower case and 1 upper case letter and 1 number and 1 special character with no spaces.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_dont_match">Password and Confirm Password doesn\'t match</string>
    <string name="phone_number">Phone Number</string>
    <string name="phonenumber_condition">Mobile number should contain atleast 10 numbers with no spaces</string>
    <string name="account_recovery">Account recovery</string>
    <string name="email_hint">Enter your email address</string>
    <string name="submit">SUBMIT</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">Choose a new password</string>
    <string name="confirm_password_hint">Re-Enter your new password</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="password_doesnt_match">New Password &amp; Confirm Password doesn\'t match.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="myplans">My Plans</string>
    <string name="all">ALL</string>
    <string name="_private">PRIVATE</string>
    <string name="_public">PUBLIC</string>
    <string name="add_plan">New plan</string>
    <string name="exit_application">Are you sure you want to exit</string>
    <string name="news">Home</string>
    <string name="search">Search</string>
    <string name="create_follow_up">Create a filter</string>
    <string name="create_follow_up_desc">Save the filter name.</string>
    <string name="follow_up_name">Filter name</string>
    <string name="follow_up_name_hint">Give a name to your filter</string>
    <string name="follow_up_name_empty">Filter name cannot be empty</string>
    <string name="filter_created">Filter created successfully</string>
    <string name="filter_updated">Filter updated successfully</string>
    <string name="filter_deleted">Filter Deleted successfully</string>
    <string name="search_for">Search for…</string>
    <string name="enter_a_name_or_category_of_plans">Enter a name or category of plans</string>
    <string name="category">Category</string>
    <string name="add_to_group">Add to group</string>
    <string name="create_new__group">CREATE NEW GROUP</string>
    <string name="contact_added_to_group">Contact has been successfully added to the Group</string>
    <string name="create_group">New Group</string>
    <string name="group_name">Group name</string>
    <string name="group_created">Group Created Successfully</string>
    <string name="group_deleted">Group Deleted Successfully</string>
    <string name="group_name_hint">Give a name to your group</string>
    <string name="group_name_error">Group name should contain atleast one character</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="contacts">Contacts</string>
    <string name="follow_ups">Filters</string>
    <string name="filter">Filter</string>
    <string name="logout">Logout</string>
    <string name="by_email">E-mail</string>
    <string name="comments">Comments</string>
    <string name="invitations">Invitations</string>
    <string name="public_plans">Public Plans</string>
    <string name="language">Language</string>
    <string name="language_hint">Select a language</string>
    <string name="currency">Currency</string>
    <string name="currency_hint">Select a currency</string>
    <string name="edit_caps">EDIT</string>
    <string name="edit_account">Edit account</string>
    <string name="set_image">SET IMAGE</string>
    <string name="account_created">Account Created Successfully</string>
    <string name="account_updated">Account updated Successfully</string>
    <string name="permission_denied">Permission denied</string>
    <string name="updating_user_please_wait" tools:ignore="TypographyEllipsis">Updating user... Please wait,..</string>
    <string name="search_contact_helper">Enter the name you want to search</string>
    <string name="groups">Groups</string>
    <string name="create_new_group">CREATE NEW GROUP</string>
    <string name="users">Users</string>
    <string name="invite_by_mail">Invite by mail</string>
    <string name="enter_an_email">Enter an e-mail</string>
    <string name="phone_contacts">Phone Contacts</string>
    <string name="contact_added">Contact has been added successfully</string>
    <string name="contact_deleted">Contact has been deleted successfully</string>
    <string name="remove">Remove</string>
    <string name="delete_contact">Remove from your Friends</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="remove_user">Remove User</string>
    <string name="delete_group">Delete group</string>
    <string name="rename_group">Rename Group</string>
    <string name="ceate_follow_up">Create a filter</string>
    <string name="edit_follow_up">"Edit Filter"</string>
    <string name="edit_follow_up_desc">You will rename your filter. Please enter your new filter name</string>
    <string name="edit_up_name_hint">Give a name to change the filter</string>
    <string name="add_to_contact">Add to Friends</string>
    <string name="plan_name">Plan name </string>
    <string name="plan_name_helpertext">Name your plan</string>
    <string name="plan_name_error">" Plan name should contain atleast 3 characters"</string>
    <string name="detail_description">Description</string>
    <string name="detail_description_helpertext">Description</string>
    <string name="category_helpertext">Select a category</string>
    <string name="select_category">Please select a category</string>
    <string name="when">When ?</string>
    <string name="add_a_period">Select a date</string>
    <string name="add_another_period">" Add another date"</string>
    <string name="select_period">Atleast one period is required</string>
    <string name="from_date">From Date</string>
    <string name="add_period_error">From Date is requied</string>
    <string name="from_date_hint">Start date is mandatory</string>
    <string name="to_date">To Date</string>
    <string name="to_date_hint">Select to date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="where">Where ?</string>
    <string name="add_place">Select a place</string>
    <string name="add_another_place">Add another place</string>
    <string name="select_place">Atleast one place is required</string>
    <string name="start_date_required">Start date is mandatory</string>
    <string name="cannot_add_multiple_dates">Cannot add multiple dates when you have an Activity</string>
    <string name="start_date_error">end date should be greater than start date</string>
    <string name="public_start_date_error">You can add only one date for a Public Plan</string>
    <string name="public_place_error">You can add only one place for a Public Plan </string>
    <string name="add_place_title">Add Place</string>
    <string name="place_name">Place name </string>
    <string name="place_name_helper_text">A name for the place</string>
    <string name="place_name_hint">A name for the place is mandatory</string>
    <string name="address">Address</string>
    <string name="address_hint">Enter an address</string>
    <string name="zipcode">Zip Code</string>
    <string name="postal_code">Postal Code</string>
    <string name="town">Town</string>
    <string name="the_city">The City</string>
    <string name="specify_country">Specify country</string>
    <string name="enable_map_support">Enable map support</string>
    <string name="place_not_found">We are unable to find the location info, Please enter a different location.</string>
    <string name="place_name_error">Place name should contain atleast 2 characters</string>
    <string name="enable_comments">Enable comments</string>
    <string name="place_title">Place</string>
    <string name="add_action">" Add task"</string>
    <string name="action_name">"Task name"</string>
    <string name="action_hint">Mandatory field</string>
    <string name="action_description">" Description"</string>
    <string name="action_description_hint">Description</string>
    <string name="action_cost">Cost of the action</string>
    <string name="null_if_no_cost">Null if no cost</string>
    <string name="action_cost_hint">Task Cost</string>
    <string name="nature_of_cost">The nature of the cost</string>
    <string name="how_much">How much ?</string>
    <string name="nature_of_cost_hint">Cost per person or Total cost ?</string>
    <string name="who_with">Who with ?</string>
    <string name="assignee_people">Assign People</string>
    <string name="assignee_people_all_caps">ASSIGN PEOPLE</string>
    <string name="add_an_action">Add a task</string>
    <string name="add_another_action">Add another task</string>
    <string name="action_title">Task</string>
    <string name="activity_title">Activity</string>
    <string name="add_activity_title">Add Activity</string>
    <string name="add_an_activity">Add an activity</string>
    <string name="add_another_activity">Add another activity</string>
    <string name="activity_cost">Cost of the activity</string>
    <string name="activity_cost_hint">How much does this activity cost?</string>
    <string name="activity_name">Activity name </string>
    <string name="activity_name_hint">A name for the activity is mandatory</string>
    <string name="max_participants_hint">Max Participants</string>
    <string name="max_participants_helper_text">The max number of participants</string>
    <string name="from_hint">Add a Period</string>
    <string name="_while">while</string>
    <string name="while_hint">Hours</string>
    <string name="while_min_hint">Minutes</string>
    <string name="how_often_title">Recurrency ?</string>
    <string name="how_often">Recurrency</string>
    <string name="once">Once</string>
    <string name="custom">Custom</string>
    <string name="event_frequency">Select a recurrency</string>
    <string name="action_name_error">Action name should contain atleast 2 characters</string>
    <string name="activity_name_error">Activity name should contain atleast 2 characters</string>
    <string name="activity_date_error">Date is required</string>
    <string name="activity_hours_error">Hours is required</string>
    <string name="activity_mins_error">Mins is required</string>
    <string name="day">Daily</string>
    <string name="week">Weekly</string>
    <string name="month">Monthly</string>
    <string name="year">Yearly</string>
</resources>