<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/rl_grey_curved">

    <TextView
        android:id="@+id/txt_add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_period"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textAppearance="?android:textAppearanceMedium" />

    <View
        android:id="@+id/view_seperator_create_group_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:layout_marginTop="24dp"
        android:layout_below="@id/txt_add_date"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/fromDateTextField"
        style="@style/MaterialTextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#000000"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ccp_ic_arrow_drop_down"
        app:endIconTint="@color/colorWhite"
        android:hint="@string/from_date"
        app:helperText="@string/from_date_hint"
        app:helperTextTextColor="@android:color/white"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#34CBFE"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/view_seperator_create_group_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fromDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:clickable="true"
            android:focusable="false"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarTrackHorizontal="@color/colorWhite"
            android:textAppearance="?android:textAppearanceMedium"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/toDateTextField"
        style="@style/MaterialTextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#000000"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ccp_ic_arrow_drop_down"
        app:endIconTint="@color/colorWhite"

        android:hint="@string/to_date"
        app:helperText="@string/to_date_hint"
        app:helperTextTextColor="@android:color/white"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#34CBFE"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/fromDateTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:clickable="true"
            android:focusable="false"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarTrackHorizontal="@color/colorWhite"
            android:textAppearance="?android:textAppearanceMedium"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_seperator_tip_create_group_gname"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:layout_marginTop="24dp"
        android:layout_below="@id/toDateTextField"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_group_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:alpha="0.6"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/view_seperator_tip_create_group_gname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_group_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/cancel"
        android:textColor="#90CAF9"
        android:layout_below="@id/view_seperator_tip_create_group_gname"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_toLeftOf="@id/btn_create_group_ok"/>

</RelativeLayout>