<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_popup_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/whenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/when"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/footerDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:background="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="@+id/whenText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whenText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromTextField"
        style="@style/MaterialTextInputLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/from"
        android:paddingBottom="16dp"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#000000"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ccp_ic_arrow_drop_down"
        app:endIconTint="@color/colorWhite"
        app:helperText="@string/from_hint"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#ffffff"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#34CBFE"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footerDivider"
        app:startIconTint="#ffffff">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_from_date_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLines="1"
            android:focusable="false"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarTrackHorizontal="@color/colorWhite"
            android:textCursorDrawable="@color/colorWhite" />

       <!-- <AutoCompleteTextView
            android:id="@+id/et_from_date_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:editable="false"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:gravity="center_vertical"
            android:inputType="none" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTextField"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hoursWhileTextField"
        style="@style/MaterialTextInputLayoutTheme"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:paddingBottom="16dp"
        android:hint="@string/_while"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#000000"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:helperText="@string/while_hint"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#ffffff"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#34CBFE"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/minutesWhileTextField"
        app:layout_constraintTop_toBottomOf="@+id/fromTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarTrackHorizontal="@color/colorWhite"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minutesWhileTextField"
        style="@style/MaterialTextInputLayoutTheme"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:paddingBottom="16dp"
        android:hint="@string/_while"
        android:textColorHint="#ffffff"
        app:boxBackgroundColor="#000000"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:helperText="@string/while_min_hint"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#ffffff"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="#34CBFE"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/hoursWhileTextField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarTrackHorizontal="@color/colorWhite"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>